# spell-checker

./: AUTHORS  CMakeLists.txt  Doxyfile  README.md  process.py  test.py
src/: test_trie.cc  text_mining_app.cc  text_mining_compiler.cc
src/dawg/: CMakeLists.txt  dawg.hh  dawg.hxx  dawg_node.hh  dawg_node.hxx
src/trie/: CMakeLists.txt  trie.hh  trie.hxx  trie_node.hh  trie_node.hxx
src/types/: types.hh
src/utils/: CMakeLists.txt  io.cc  io.hh  io.hxx
tests/: Makefile  bin  test_trie.cc  word.txt
